# Lazy-Claw

./: .env.example  .gitignore  ADR-001-LAZYCLAW-AUDIT.md  ARCHITECTURE_PLAN.md  BROWSER_OVERHAUL.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCS.md  Dockerfile  LAUNCH-PLAN.md  LICENSE  Modelfile.e2b-agent  Modelfile.e4b-agent  README.md  SECURITY.md  SPRINT-24H-PROMPTS.md  TODO.md  docker-compose.activepieces.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  transfer-claude.sh  tui-mockup.jsx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
connector/: connector.py  main.py  security.py
docs/adr/: 0001-n8n-schema-in-interface.md  0002-skill-outcome-learning-loop.md  0003-direct-google-api-over-n8n.md  README.md  template.md
docs/integrations/: activepieces.md  n8n.md
lazyclaw/: __init__.py  __main__.py  cli.py  cli_admin.py  cli_chat.py  cli_dashboard.py  cli_migrate_lazybrain.py  cli_server.py  cli_tui.py  config.py  logging_config.py
lazyclaw/browser/: __init__.py  action_errors.py  action_planner.py  action_verifier.py  agent.py  backend.py  browser_settings.py  browser_use_backend.py  cdp.py  cdp_backend.py  cdp_utils.py  checkpoints.py  dom_optimizer.py  event_bus.py  host_bridge.py  human_input.py  manager.py  network_inspector.py  page_reader.py  path_compiler.py  payment.py  remote_takeover.py  research_strategy.py  site_memory.py  smart_browser.py  snapshot.py  stealth.py  tab_manager.py  template_synth.py  templates.py  templates_seed.json  vision_fallback.py  watcher.py
lazyclaw/channels/: base.py  note_capture.py  telegram.py  telegram_commands.py
lazyclaw/computer/: __init__.py  connector_server.py  manager.py  native.py  security.py
lazyclaw/crypto/: encryption.py  key_manager.py  recovery.py  vault.py
lazyclaw/db/: connection.py  schema.sql
lazyclaw/gateway/: app.py  auth.py
lazyclaw/heartbeat/: cron.py  daemon.py  mcp_watcher.py  orchestrator.py
lazyclaw/lazybrain/: __init__.py  ask.py  auto_capture.py  autolink.py  canvas.py  embeddings.py  events.py  graph.py  journal.py  metadata_suggest.py  recap.py  rollup.py  rotation.py  store.py  timezone_util.py  topic_rollup.py  wikilinks.py
lazyclaw/llm/: eco_router.py  eco_settings.py  free_providers.py  mlx_manager.py  model_manager.py  model_registry.py  pricing.py  ram_monitor.py  rate_limiter.py  router.py
lazyclaw/mcp/: bridge.py  client.py  manager.py  oauth.py  server.py  token_store.py
lazyclaw/memory/: __init__.py  classifier.py  compressor.py  context_compactor.py  daily_log.py  layers.py  personal.py  summarizer.py
lazyclaw/notifications/: push.py  telegram_notifier.py
lazyclaw/permissions/: __init__.py  approvals.py  audit.py  checker.py  models.py  settings.py
lazyclaw/pipeline/: store.py
lazyclaw/queue/: lane.py
lazyclaw/replay/: __init__.py  engine.py  models.py  recorder.py  sharing.py
lazyclaw/runtime/: agent.py  agent_settings.py  aio_helpers.py  callbacks.py  context_builder.py  dispatcher.py  events.py  lesson_extractor.py  lesson_store.py  personality.py  plan_checkpoint.py  result_verifier.py  session_resolver.py  skill_lesson.py  stuck_detector.py  summary.py  taor.py  task_event_bus.py  task_runner.py  task_splitter.py  team_lead.py  todo_manager.py  tool_executor.py  tool_result.py  wikilink_injector.py
mcp-apihunter/: pyproject.toml
mcp-apihunter/mcp_apihunter/: __init__.py  __main__.py  config.py  main.py  models.py  registry.py  scanner.py  server.py  validator.py
mcp-freeride/: pyproject.toml
mcp-freeride/mcp_freeride/: __init__.py  __main__.py  config.py  health.py  main.py  router.py  server.py
mcp-freeride/mcp_freeride/providers/: base.py  gemini.py  groq.py  huggingface.py  mistral.py  ollama.py  openrouter.py  together.py
mcp-healthcheck/: pyproject.toml
mcp-healthcheck/mcp_healthcheck/: __init__.py  __main__.py  config.py  history.py  main.py  monitor.py  providers.py  scorer.py  server.py
mcp-instagram/: pyproject.toml
mcp-instagram/mcp_instagram/: __main__.py  server.py  session_manager.py
mcp-lazydoctor/: pyproject.toml
mcp-lazydoctor/mcp_lazydoctor/: __init__.py  __main__.py  config.py  diagnostics.py  fixer.py  git_ops.py  main.py  runner.py  server.py
mcp-taskai/: pyproject.toml
mcp-taskai/mcp_taskai/: __init__.py  __main__.py  ai_client.py  config.py  intelligence.py  main.py  prompts.py  server.py
mcp-vaultwhisper/: pyproject.toml
mcp-vaultwhisper/mcp_vaultwhisper/: __init__.py  __main__.py  config.py  detector.py  main.py  patterns.py  proxy.py  restorer.py  scrubber.py  server.py
mcp-whatsapp/: package.json
n8n-custom/: Dockerfile  hide-ai.html  hide-chat.css  start.sh
patches/: workspace-mcp-login-hint.patch
personality/: HEARTBEAT.md  SOUL.md
production/mcps/mcp-email/: README.md  pyproject.toml
production/mcps/mcp-email/mcp_email/: __main__.py  providers.py
production/mcps/mcp-jobspy/: README.md  pyproject.toml
production/mcps/mcp-jobspy/mcp_jobspy/: __init__.py  __main__.py
production/mcps/mcp-lazydoctor/: README.md  pyproject.toml
production/mcps/mcp-lazydoctor/mcp_lazydoctor/: __main__.py  git_ops.py  server.py
scripts/: backfill_wikilinks.py  clean_oauth_memory.py  profile_graph_endpoint.py  scrub_n8n_key.py
tests/: test_agent_hallucination_correction.py  test_browser_action_errors.py  test_browser_cdp_events.py  test_browser_event_bus.py  test_browser_network_inspector.py  test_crypto.py  test_google_direct_delete.py  test_host_bridge.py  test_lazybrain_auto_capture.py  test_lazybrain_graph_positions.py  test_lazybrain_journal.py  test_lazybrain_wikilinks.py  test_memory_save_guard.py  test_minimax_via_anthropic.py  test_n8n_auto_bind.py  test_n8n_credential_binding.py  test_n8n_mcp_bridge.py  test_n8n_node_validator.py  test_n8n_sanitize.py  test_nl_time_extended.py  test_note_capture_triggers.py  test_session_resolver.py  test_skill_lesson.py  test_skill_registry.py  test_task_lazybrain_mirror.py
web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: api.ts  (+2 more)
(+239 files in other folders)
