[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyclaw"
version = "0.1.0"
description = "E2E Encrypted AI Agent Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "python-multipart>=0.0.7",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "ddgs>=9.0.0",
    "bcrypt>=4.0.0",
    "croniter>=1.3.0",
    "prompt_toolkit>=3.0.0",
    "playwright>=1.41.0",
    "browser-use>=0.1.0",
    "langchain-openai>=0.1.0",
]

[project.optional-dependencies]
browser = []
telegram = []
discord = ["discord.py>=2.3.0"]
mcp = ["mcp>=1.0.0"]
eco = [
    "mcp-freeride @ file:mcp-freeride",
    "mcp-healthcheck @ file:mcp-healthcheck",
    "mcp-apihunter @ file:mcp-apihunter",
    "mcp-vaultwhisper @ file:mcp-vaultwhisper",
    "mcp-taskai @ file:mcp-taskai",
]
voice = ["openai-whisper>=20231117"]
local = ["llama-cpp-python>=0.2.0"]
all = ["lazyclaw[browser,telegram,discord,mcp,voice,eco]"]

[project.scripts]
lazyclaw = "lazyclaw.cli:main"

[tool.setuptools.packages.find]
include = ["lazyclaw*"]
