[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyclaw"
version = "0.2.0"
description = "E2E Encrypted AI Agent Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.5.0",
    "cryptography>=42.0.0",
    "httpx>=0.27.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "python-multipart>=0.0.7",
    "click>=8.1.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=21.0",
    "ddgs>=9.0.0",
    "bcrypt>=4.0.0",
    "croniter>=1.3.0",
    "prompt_toolkit>=3.0.0",
    "textual>=0.50.0",
    "mcp>=1.0.0",
    # Google Workspace MCP server (Sheets / Drive / Gmail / Calendar / Docs).
    # Installed inside the container so it's launchable as `workspace-mcp`
    # via the Web UI's MCP → Add Server flow. See ADR-0003.
    "workspace-mcp>=1.19.0,<1.21.0",
]

[project.optional-dependencies]
telegram = []
discord = ["discord.py>=2.3.0"]
eco = []
voice = ["openai-whisper>=20231117"]
local = ["llama-cpp-python>=0.2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
all = ["lazyclaw[telegram,discord,voice,eco,dev]"]

[project.scripts]
lazyclaw = "lazyclaw.cli:main"
lazyclaw-migrate-brain = "lazyclaw.cli_migrate_lazybrain:main"

[tool.setuptools.packages.find]
include = ["lazyclaw*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
