[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-apihunter"
version = "0.1.0"
description = "Community-driven free API discovery engine — MCP server with crowdsourced endpoint registry"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.19.0",
]

[project.scripts]
mcp-server-apihunter = "mcp_apihunter.main:main"

[tool.setuptools.packages.find]
include = ["mcp_apihunter*"]
