[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-freeride"
version = "0.1.0"
description = "Free AI Router — MCP server that routes across free AI APIs with automatic fallback"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-server-freeride = "mcp_freeride.main:main"

[tool.setuptools.packages.find]
include = ["mcp_freeride*"]
