[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-healthcheck"
version = "0.1.0"
description = "AI Source Health Monitor — MCP server that pings free AI APIs and serves a live leaderboard"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-server-healthcheck = "mcp_healthcheck.main:main"

[tool.setuptools.packages.find]
include = ["mcp_healthcheck*"]
