[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-taskai"
version = "0.1.0"
description = "Task Intelligence — MCP server that auto-categorizes, prioritizes, and deduplicates tasks via free AI"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-server-taskai = "mcp_taskai.main:main"

[tool.setuptools.packages.find]
include = ["mcp_taskai*"]
