[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-taskai"
version = "0.1.0"
description = "Task Intelligence — MCP server that auto-categorizes, prioritizes, and deduplicates tasks via free AI"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]
