[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-vaultwhisper"
version = "0.1.0"
description = "Privacy-Safe AI Proxy — strips PII before sending to free AI APIs, re-injects after response"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
mcp-server-vaultwhisper = "mcp_vaultwhisper.main:main"

[tool.setuptools.packages.find]
include = ["mcp_vaultwhisper*"]
